--- a/style.css
+++ b/style.css
@@ -1,73 +1,197 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
 
-#logo{
-    width: 268px;
-    height: 68px;
+#logo {
+  width: 268px;
+  height: 68px;
 }
-header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    background-color: white;
-    top: 0;
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  top: 0;
 }
-.menu{
-    display: flex;
-    list-style: none;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 30px;
-    font-family: Roboto, Arial, sans-serif;
-    color: #ababab;
-    cursor: pointer;
-    
+.menu {
+  display: flex;
+  list-style: none;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  font-family: Roboto, Arial, sans-serif;
+  color: #ababab;
+  cursor: pointer;
 }
-.menu-item{
-    margin-right: 20px;
+.menu-item {
+  margin-right: 20px;
 }
-.drop-menu{
-    display: none;
-    width: 200px;
-    margin-left: -40px;
-    background-color: white;
-    
+.drop-menu {
+  display: none;
+  width: 200px;
+  margin-left: -40px;
+  background-color: white;
 }
-.menu-item:hover .drop-menu{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    color: #ababab;
-    
+.menu-item:hover .drop-menu {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  color: #ababab;
 }
-.drop-menu-item{
-    list-style: none;
+.drop-menu-item {
+  list-style: none;
 }
-.menu-item:hover{
-    color: rgb(0, 179, 155);
+.menu-item:hover {
+  color: rgb(0, 179, 155);
 }
-.drop-menu-item:hover{
-    color: rgb(0, 179, 155);
+.drop-menu-item:hover {
+  color: rgb(0, 179, 155);
 }
-.first-section{
-    text-align: center;
-    padding-top: 100px;
+.first-section {
+  text-align: center;
+  padding-top: 100px;
 }
-.first-section h1{
-    font:400 34.5px "Work Sans", Arial, sans-serif;
-    color: rgb(0, 179, 155);
+.first-section h1 {
+  font: 400 34.5px "Work Sans", Arial, sans-serif;
+  color: rgb(0, 179, 155);
 }
 .second-section {
-    display: flex;
-    margin: 0px 200px;
-    justify-content: space-between;
-    
+  display: flex;
+  margin: 0px 200px;
+  justify-content: space-between;
 }
-.second-section p{
-    width: 48%;
-    font:400 16px Roboto, Arial, sans-serif;
-    line-height: 28px;
-    color: rgb(116, 116, 116);
-    text-align: justify;
+.second-section p {
+  width: 48%;
+  font: 400 16px Roboto, Arial, sans-serif;
+  line-height: 28px;
+  color: rgb(116, 116, 116);
+  text-align: justify;
+}
+.third-section {
+  display: flex;
+  justify-content: space-around;
+  margin: 0px 180px;
+
+  color: white;
+  line-height: 20px;
+}
+.patients {
+  background-color: #1ad1b9;
+  font: 100 20px "Work Sans", Arial, sans-serif;
+}
+.doctors {
+  background-color: #5190e2;
+  font: 100 20px "Work Sans", Arial, sans-serif;
+}
+.clinics {
+  background-color: #323d49;
+  font: 100 20px "Work Sans", Arial, sans-serif;
+}
+.third-section div {
+  width: 312px;
+  height: 290px;
+  margin: 20px 10px;
+  border-radius: 15px;
+  padding: 30px;
+}
+.third-section select {
+  background: transparent;
+  border: none;
+  font: 100 20px "Work Sans", Arial, sans-serif;
+  margin-top: 15px;
+  color: white;
+  text-decoration: underline;
+}
+.third-section option {
+  color: black;
+}
+.fourth-section {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 200px;
+}
+.fourth-section h1 {
+  font: 300 26px "Work Sans", Arial, sans-serif;
+  width: 400px;
+  margin-right: 100px;
+  color: rgb(0, 179, 155);
+}
+.logos i {
+  color: rgb(116, 116, 116);
+}
+.logos i:hover {
+  color: rgb(0, 179, 155);
+}
+.fifth-section {
+  margin-top: 40px;
+  height: 600px;
+  width: 1350px;
+  background-color: #d5f6f6;
+  background-image: url("https://www.docplanner.com/img/logo.png");
+  background-repeat: no-repeat;
+  background-position-x: 50px;
+  background-position-y: 230px;
+  position: relative;
+  z-index: -1;
+}
+.fifth-section h1 {
+  font: 300 32px "Work Sans", Arial, sans-serif;
+  color: rgb(0, 179, 155);
+  position: absolute;
+  top: 30px;
+  left: 200px;
+  width: 400px;
+}
+.fifth-section p {
+  font: 400 15px Roboto, Arial, sans-serif;
+  color: rgb(116, 116, 116);
+  position: absolute;
+  top: 150px;
+  left: 200px;
+  width: 450px;
+}
+.table {
+  position: absolute;
+  right: 120px;
+  display: flex;
+  color: rgb(0, 179, 155);
+  font: 100 16px "Work Sans", Arial, sans-serif;
+  margin-top: 40px;
+}
+.column-one {
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+  margin-top: 30px;
+  margin-right: 20px;
+}
+.column-two {
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+}
+.column-one div {
+  background-color: white;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  text-align: center;
+  width: 200px;
+  height: 220px;
+  padding: 15px;
+  margin-right: 20px;
+}
+.column-two div {
+  background-color: white;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  text-align: center;
+  width: 200px;
+  height: 220px;
+  padding: 15px;
+}
+.column-two h6 {
+  color: rgb(116, 116, 116);
+}
+.column-one h6 {
+  color: rgb(116, 116, 116);
 }
